--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -4,20 +4,31 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Coding Gurus</title>
-    <link href="/stylesheets/bootstrap/bootstrap.css" rel="stylesheet" />
+    <!-- Newest version.  -->
+    <link href="/stylesheets/bootstrap/bootstrap1.css" rel="stylesheet" />
+    <!-- Old version.  -->
+    <link href="/stylesheets/bootstrap/bootstrap2.css" rel="stylesheet" />
   </head>
   <body class="d-flex flex-column vh-100">
     <!-- Display the navbar in boilerplate.ejs.  -->
     <%- include('../partials/navbar') %>
     <!-- The line below contains the content of each .ejs layout files.  -->
-    <main class="container mt-5"><%- body %></main>
+    <!-- Display the flash message.  -->
+    <main class="container mt-5">
+      <%- include('../partials/flash') %> <%- body %>
+    </main>
     <!-- Display the footer in boilerplate.ejs.  -->
     <%- include('../partials/footer') %>
+
+    <!-- Newest version.  -->
     <script src="/stylesheets/bootstrap/bootstrap1.js"></script>
     <script src="/stylesheets/bootstrap/bootstrap2.js"></script>
     <script src="/stylesheets/bootstrap/bootstrap3.js"></script>
+    <!-- Old version.  -->
+    <script src="/stylesheets/bootstrap/bootstrap4.js"></script>
+    <script src="/stylesheets/bootstrap/bootstrap5.js"></script>
 
     <!-- Use to validate forms.  -->
-    <script src="/validateForms.js"></script>
+    <script src="/scripts/validateForms.js"></script>
   </body>
 </html>
