--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -23,5 +23,20 @@
         <a class="nav-link" href="/threads/new">New Thread</a>
       </li>
     </ul>
+    <!-- If the user is not login, show login and register button.  Otherwise, show logout button.  -->
+    <ul class="navbar-nav ml-auto">
+      <% if(!currentUser) { %>
+      <li class="nav-item active">
+        <a class="nav-link" href="/login">Login</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/register">Register</a>
+      </li>
+      <% } else { %>
+      <li class="nav-item">
+        <a class="nav-link" href="/logout">Logout</a>
+      </li>
+      <% } %>
+    </ul>
   </div>
 </nav>
