--- a/views/threads/show.ejs
+++ b/views/threads/show.ejs
@@ -1,4 +1,3 @@
-<!-- boilerplate.ejs set up the general layout for this ejs file. -->
 <% layout('layouts/boilerplate')%>
 
 <div class="row">
@@ -10,13 +9,12 @@
     <ul class="list-group list-group-flush">
       <li class="list-group-item">Post by: <%= thread.author.username %></li>
       <li class="list-group-item">Post On: <%= thread.postTime %></li>
+      <% if (thread.postTime.getTime() !== thread.lastEditTime.getTime()) { %>
       <li class="list-group-item">
         Last edited on: <%= thread.lastEditTime %>
       </li>
+      <% } %>
     </ul>
-    <!-- If current user exists and current user is equal to the user that posted the thread, show the post and delete buttons.  -->
-    <!-- The link goes to the edit page.  -->
-    <!-- The form goes submit a DELETE requests on localhost:3000/threads/:id, which overrides POST request.  -->
     <% if(currentUser && thread.author.equals(currentUser._id)) { %>
     <div class="card-body">
       <a class="card-link btn btn-warning" href="/threads/<%=thread._id%>/edit"
@@ -32,8 +30,6 @@
     </div>
     <% } %>
     <hr />
-    <!-- The form goes submit a POST requests on localhost:3000/threads/:id/replies, which overrides POST request.  -->
-    <!-- I can only see the form if there's a current user.  -->
     <% if(currentUser) { %>
     <form
       class="mb-3 validated-form"
@@ -65,13 +61,13 @@
       <ul class="list-group list-group-flush">
         <li class="list-group-item">Post by: <%= reply.author.username %></li>
         <li class="list-group-item">Post On: <%= reply.replyPostTime %></li>
+        <% if (reply.replyPostTime.getTime() !==
+        reply.replyLastEditTime.getTime()) { %>
         <li class="list-group-item">
           Last edited on: <%= reply.replyLastEditTime %>
         </li>
+        <% } %>
       </ul>
-      <!-- Create a form to delete to reply for each reply.  
-      When the form is submitted, send a delete request to localhost:3000/threads/:id/replies/:replyId.  
-      Only show the delete button if there's a signed in user and the user is the same as the author.  -->
       <% if(currentUser && reply.author.equals(currentUser._id)) { %>
       <div class="card-body">
         <form
